--- a/assets/w3c_rioned_base.css
+++ b/assets/w3c_rioned_base.css
@@ -75,13 +75,13 @@
 		counter-reset: example figure issue;
 
 		/* Layout */
-		max-width: 50em;               /* limit line length to 50em for readability   */
+		max-width: 70em;               /* mv: was 50em - limit line length to 50em for readability */
 		margin: 0 auto;                /* center text within page                     */
 		padding: 1.6em 1.5em 2em 50px; /* assume 16px font size for downlevel clients */
 		padding: 1.6em 1.5em 2em calc(26px + 1.5em); /* leave space for status flag     */
 
 		/* Typography */
-		line-height: 1.5;
+		line-height: 1.0; /* mv: was 1.2 */
 		font-family: sans-serif;
 		widows: 2;
 		orphans: 2;
@@ -353,10 +353,10 @@
 
 	h1 { margin-top: 3rem; color: #005A9C; font-size: 200%; }
 	h2 { margin-top: 3rem; color: #005A9C; font-size: 180%; }
-	h3 { margin-top: 3rem; color: #005A9C; font-size: 160%; font-weight: bold; } /* mv: level1 binnen <section> */
-	h4 { margin-top: 2rem; color: #005A9C; font-size: 140%; font-weight: bold; }
-	h5 { margin-top: 1rem; color: #005A9C; font-size: 120%; font-style: italic; font-weight: bold; }
-	h6 { margin-top: 1rem; color: #005A9C; font-style: italic; font-weight: bold; }
+	h3 { margin-top: 3rem; margin-bottom: 0; color: #005A9C; font-size: 160%; font-weight: bold; } /* mv: level1 binnen <section> */
+	h4 { margin-top: 2rem; margin-bottom: 0; color: #005A9C; font-size: 140%; font-weight: bold; }
+	h5 { margin-top: 1rem; margin-bottom: 0; color: #005A9C; font-size: 120%; font-style: italic; font-weight: bold; }
+	h6 { margin-top: 1rem; margin-bottom: 0; color: #005A9C; font-style: italic; font-weight: bold; }
 	dt { font-weight: bold; }
 
 /** Subheadings ***************************************************************/
