--- a/assets/w3c_rioned_base.css
+++ b/assets/w3c_rioned_base.css
@@ -744,6 +744,7 @@ table.default td {
   background-color: rgb(255, 251, 255);
 }
 table.simp {
+  margin-top: 1em;
   font-size: 0.95em;
   background-color:  rgb(245, 247, 255);
 }
