--- a/assets/w3c_rioned_base.css
+++ b/assets/w3c_rioned_base.css
@@ -522,8 +522,9 @@
   div.box{ /* 20210322 */
     background: lightyellow; 
     border: none;
-    box-shadow:rgba(75%, 75%, 75%, .25);
-    margin-top: 2em;
+    box-shadow: 0px, 3px, 5px, 0px,rgba(75%, 75%, 75%, .25);
+    padding: 1em;
+    margin-top: 1em;
   }
 
 /******************************************************************************/
