--- a/assets/w3c_rioned_base.css
+++ b/assets/w3c_rioned_base.css
@@ -522,7 +522,7 @@
   div.box{ /* 20210322 */
     background: lightyellow; 
     border: none;
-    box-shadow: 0px, 3px, 5px, 0px,rgba(75%, 75%, 75%, .25);
+    box-shadow: 3px 3px rgba(75%, 75%, 75%, .25);
     padding: 1em;
     margin-top: 1em;
   }
